<resources>
    <string name="app_name">IM</string>

    <string name="tt_ok">确定</string>
    <string name="tt_cancel">取消</string>
    <string name="take_photo_btn_text">照片</string>
    <string name="take_camera_btn_text">拍照</string>
    <string name="default_emo">默认表情</string>
    <string name="yaya_emo">呀呀表情</string>
    <string name="tip_for_voice_forward">按住说话</string>
    <string name="call_mode">听筒模式</string>
    <string name="speaker_mode">扬声器模式</string>
    <string name="copy">复制</string>
    <string name="resend">重发</string>
    <string name="send_message">发表</string>
    <string name="title_activity_pick_photo">PickPhotoActivity</string>
    <string name="send">发送</string>
    <string name="preview">预览</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="exit">退出</string>
    <string name="thumb_remove">清理图片缓存</string>
    <string name="notify_setting">通知设置</string>
    <string name="thumb_remove_finish">清理完成</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="request_login_faild">请求登陆消息服务器失败</string>
    <string name="sdcard_unavaluable">请检查存储卡是否可用</string>
    <string name="image_path_unavaluable">图片路径无效</string>
    <string name="disconnected">连接已断开</string>
    <string name="requesting">正在获取信息...</string>
    <string name="connecting">正在连接...</string>
    <string name="chat">发信息</string>
    <string name="contact_all">全部</string>
    <string name="contact_department">部门</string>
    <string name="top_left_back">返回</string>
    <string name="group_name_tip">群聊名称</string>
    <string name="chat_failed_search">未搜索到匹配的结果</string>
    <string name="save">保存</string>
    <string name="chat_detail">聊天详情</string>
    <string name="choose_contact">选择联系人</string>
    <string name="switch_login_server">切换登陆服务器</string>
    <string name="switch_login_server_title">输入登陆服务器地址</string>


    <!--新的朋友-->
    <string name="add_friend">添加朋友</string>
    <string name="no_recommend_friend">还没有推荐的朋友</string>
    <string name="no_recommend_friend_tip">你可以绑定手机/QQ账号，以便找到更多好友</string>
    <string name="add_phone_contact">添加手机联系人</string>
    <string name="wechat_qq_phone">Jabber ID</string>
    <string name="agree_friend_fail">同意添加好友失败</string>

    <string name="create_group">发起群聊</string>
    <string name="scan_one_scan">扫一扫</string>
    <string name="payment_received">收付款</string>
    <string name="help_feedback">帮助与反馈</string>

    <!--添加朋友-->
    <string name="my_wechat_account">我的微信号:</string>
    <string name="radar_add_friend">雷达加朋友</string>
    <string name="add_near_friend">添加身边的朋友</string>
    <string name="create_group_face_to_face">面对面建群</string>
    <string name="create_group_with_near_friend">与身边的朋友进入同一个群聊</string>
    <string name="scan_qr_code_business_card">扫描二维码名片</string>
    <string name="phone_contacts">手机联系人</string>
    <string name="add_friend_from_contact">添加或邀请通讯录中的朋友</string>
    <string name="public_number">公众号</string>
    <string name="get_more_info_and_service">获取更多资讯和服务</string>

    <!--搜索用户-->
    <string name="user_no_found">该用户不存在</string>
    <string name="search_colon">搜索:</string>
    <string name="search">搜索</string>


    <!--联系人-->
    <string name="new_friend">新的朋友</string>
    <string name="group_cheat">群聊</string>
    <string name="group_tag">标签</string>
    <string name="group_public_number">公众号</string>
    <string name="load_contacts_error">加载联系人失败</string>
    <string name="count_of_contacts">%1$d位联系人</string>

    <!--修改备注-->
    <string name="alias">备注名</string>
    <string name="tag">标签</string>
    <string name="add_tag_to_classfy_contacts">添加标签对联系人进行分类</string>
    <string name="phone_number">电话号码</string>
    <string name="add_phone_number">添加电话号码</string>
    <string name="describe">描述</string>
    <string name="add_picture">附加图片</string>
    <string name="add_business_card_or_pic">添加名片或相关图片</string>
    <string name="alias_no_empty">备注名不能为空</string>

    <string name="read_article">新闻关注</string>
    <string name="scan">扫一扫</string>
    <string name="shake">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="shopping">购物</string>

    <string name="account_settings_jabber_id">Jabber ID</string>
    <string name="your_account">你搜索的账号</string>
    <string name="account_settings_example_jabber_id">username@example.com</string>
</resources>
