<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_account"
        android:textColor="@color/dark_black"
        android:textSize="15sp" />

    <TextView
        android:visibility="gone"
        android:textSize="13sp"
        android:id="@+id/account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/jabber_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/account_settings_jabber_id"
        android:textColor="@color/dark_black"
        android:textSize="14sp" />

    <AutoCompleteTextView
        android:id="@+id/jid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_settings_example_jabber_id"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textSize="16sp" />

</LinearLayout>